--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,9 @@ add_subdirectory(externals/cage)
 
 file(GLOB_RECURSE flittermouse-sources "sources/*")
 add_executable(flittermouse ${flittermouse-sources})
-target_include_directories(flittermouse PRIVATE "externals/dualmc/include")
+target_include_directories(flittermouse PRIVATE "externals/dualmc/include" "externals/xatlas")
+target_sources(flittermouse PRIVATE "externals/dualmc/include/dualmc.h" "externals/xatlas/xatlas.h" "externals/xatlas/xatlas.cpp")
+set_source_files_properties("externals/xatlas/xatlas.cpp" PROPERTIES COMPILE_DEFINITIONS "XA_MULTITHREADED=0")
 target_link_libraries(flittermouse cage-client)
 cage_ide_category(flittermouse flittermouse)
 cage_ide_sort_files(flittermouse)
