update engine; clean old assets

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,7 @@ add_executable(flittermouse ${flittermouse-sources})
 target_include_directories(flittermouse PRIVATE "externals/dualmc/include" "externals/xatlas")
 target_sources(flittermouse PRIVATE "externals/dualmc/include/dualmc.h" "externals/xatlas/xatlas.h" "externals/xatlas/xatlas.cpp")
 set_source_files_properties("externals/xatlas/xatlas.cpp" PROPERTIES COMPILE_DEFINITIONS "XA_MULTITHREADED=0")
-target_link_libraries(flittermouse cage-client)
+target_link_libraries(flittermouse cage-engine)
 cage_ide_category(flittermouse flittermouse)
 cage_ide_sort_files(flittermouse)
 cage_ide_working_dir_in_place(flittermouse)
