--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,9 +10,11 @@ add_subdirectory(externals/cage)
 
 file(GLOB_RECURSE flittermouse-sources "sources/*")
 add_executable(flittermouse ${flittermouse-sources})
-target_include_directories(flittermouse PRIVATE "externals/dualmc/include" "externals/xatlas")
-target_sources(flittermouse PRIVATE "externals/dualmc/include/dualmc.h" "externals/xatlas/xatlas.h" "externals/xatlas/xatlas.cpp")
+target_include_directories(flittermouse PRIVATE "externals/dualmc/include" "externals/xatlas" "externals/trianglepacker")
+target_sources(flittermouse PRIVATE "externals/dualmc/include/dualmc.h" "externals/xatlas/xatlas.h" "externals/xatlas/xatlas.cpp" "externals/trianglepacker/trianglepacker.h")
 set_source_files_properties("externals/xatlas/xatlas.cpp" PROPERTIES COMPILE_DEFINITIONS "XA_MULTITHREADED=0")
+target_compile_definitions(flittermouse PRIVATE "UV_MODE_XATLAS")
+#target_compile_definitions(flittermouse PRIVATE "UV_MODE_TRIANGLEPACKER")
 target_link_libraries(flittermouse cage-engine)
 cage_ide_category(flittermouse flittermouse)
 cage_ide_sort_files(flittermouse)
