--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project(flittermouse CXX)
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/externals/cage/cmake")
 include(cage_all)
 cage_default_init()
-cage_directory_link("${CMAKE_CURRENT_SOURCE_DIR}/data/flittermouse" "${CMAKE_BINARY_DIR}/result/data/flittermouse")
+cage_assets_add_data_path("${CMAKE_CURRENT_SOURCE_DIR}/data")
 
 add_subdirectory(externals/cage)
 
