--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -80,7 +80,7 @@ jobs:
     - name: Install packages
       run: |
         sudo apt-get update
-        sudo apt-get install -y xorg-dev ${{ matrix.compiler.install }}
+        sudo apt-get install -y xorg-dev nasm ${{ matrix.compiler.install }}
 
     - name: Versions
       run: |
