update engine (simple library; inputs)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,7 @@ add_subdirectory(externals/cage)
 
 file(GLOB_RECURSE flittermouse-sources "sources/*")
 add_executable(flittermouse ${flittermouse-sources})
-target_link_libraries(flittermouse cage-engine)
+target_link_libraries(flittermouse cage-simple)
 cage_ide_category(flittermouse flittermouse)
 cage_ide_sort_files(flittermouse)
 cage_ide_working_dir_in_place(flittermouse)
